--- a/index.html
+++ b/index.html
@@ -1135,6 +1135,34 @@
         </div>
         <!-- ========= Card 11 END =========  -->
 
+
+        <!-- ========= Card 12 START =========   -->
+        <div class="card">
+          <p class="name">Anirban</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/AnirbanB710" target="_blank">AnirbanB710</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Anirban710" target="_blank">Anirban710</a>
+          </p>
+          <p class="about">I am a 2024 graduate, tech enthusisast with proficiency in DSA using C++ and intermediate development skills, currently working in PwC as Technology Consultant.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://youtu.be/EerdGm-ehJQ?si=eF_cjMWIowB42k1U" target="_blank" title="First Resource"> Great resource to learn Javascript </a>
+              </li>
+              <li>
+                <a href="https://youtu.be/G3e-cpL7ofc?si=lkgWBnxPCYeGjwr7" target="_blank" title="Second Resource"> Great start to Html &amp; CSS language </a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@LoveBabbar" target="_blank" title="Third resource"> A Great youtube Channel for DSA </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ========= Card 12 END =========   -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
