--- a/index.html
+++ b/index.html
@@ -1161,7 +1161,7 @@
             </ul>
           </div>
         </div>
-        <!-- ========= Card 12 END =========   -->
+        <!-- ========= Card 12 END ========f=   -->
 
         <!-- ========= END ========= -->
 
