--- a/index.html
+++ b/index.html
@@ -1156,12 +1156,12 @@
                 <a href="https://youtu.be/G3e-cpL7ofc?si=lkgWBnxPCYeGjwr7" target="_blank" title="Second Resource"> Great start to Html &amp; CSS language </a>
               </li>
               <li>
-                <a href="https://www.youtube.com/@LoveBabbar" target="_blank" title="Third resource"> A Great youtube Channel for DSA </a>
+                <a href="https://www.youtube.com/@LoveBabbar" target="_blank" title="Third resource"> A Great youtube Channel for DSA using C++ </a>
               </li>
             </ul>
           </div>
         </div>
-        <!-- ========= Card 12 END ========f=   -->
+        <!-- ========= Card 12 END =========   -->
 
         <!-- ========= END ========= -->
 
