--- a/index.html
+++ b/index.html
@@ -110,6 +110,35 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+          <!-- ________ Antariksh Rajkonwar Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Antariksh Rajkonwar</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/AD_Rajkonwar" target="_blank">@AD_Rajkonwar</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/antariksh-rajkonwar" target="_blank">antariksh-rajkonwar</a>
+          </p>
+          <p class="about">Computer Engineering student | Passionate about tech, finance, startups, and music 💻🎵🚀💼</p>
+          <div class="resources">
+            <p>3 Useful Resources Only For You❤️</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/@AntarikshRajkonwar" target="_blank" title="First Resource">Youtube: @AntarikshRajkonwar</a> - Subscribe for useful Software Engineering videos :)
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/in/antariksh-rajkonwar/" target="_blank" title="Second Resource">LinkedIn: antariksh-rajkonwar</a> - Follow for regular Tech updates!
+              </li>
+              <li>
+                <a href="https://antariksh.netlify.app/" target="_blank" title="Third resource">My Portfolio</a> - All about my work, projects and learnings.
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- === Paste YOUR CARD directly BELOW this line === -->
         
         <!-- ________ bizougarnziyad's card START ________  -->
         <div class="card">
