--- a/index.html
+++ b/index.html
@@ -110,6 +110,35 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+        
+        <!-- ________ sneha roy's card START ________  -->
+        <div class="card">
+          <p class="name">Sneha Roy</p>
+          <p class="contact">
+            <i class="fab fa-linkedln"></i>
+            <a href="https://www.linkedin.com/in/sneha-roy-a90533288/" target="_blank">sneha Roy</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Sneha010924" target="_blank">Sneha010924</a>
+          </p>
+          <p class="about">I AM 3RD YEAR STUDENT OF BSC HONS COMPUTER SCIENCE AT DELHI UNIVERSITY.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="First Resource">geeksforgeeks</a>
+              </li>
+              <li>
+                <a href="https://medium.com/" target="_blank" title="Second Resource">Medium</a>
+              </li>
+              <li>
+                <a href="https://www.javatpoint.com/" target="_blank" title="Third resource">javatpoint</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         
         <!-- ________ bizougarnziyad's card START ________  -->
         <div class="card">
