--- a/index.html
+++ b/index.html
@@ -110,7 +110,34 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
-        
+
+        <!-- ________ harshthkkr's card START ________  -->
+        <div class="card">
+          <p class="name">Harsh Thakkar</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/harshthkkr" target="_blank">harshthkkr</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/harshthakkr" target="_blank">harshthakkr</a>
+          </p>
+          <p class="about">I am a full-stack web developer, starting off my open source journey today.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://takeuforward.org/strivers-a2z-dsa-course/strivers-a2z-dsa-course-sheet-2/" target="_blank" title="It'a very good resource to learn and practice Data Structures & Algorithms.">TakeUForward</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@harkirat1/videos" target="_blank" title="It's a nice YT channel for Indian folks to learn about web development.">Harkirat Singh</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@Fireship/videos" target="_blank" title="Everyone knows him.">Tech Updates</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ harshthkkr's card END ________  -->
+
         <!-- ________ bizougarnziyad's card START ________  -->
         <div class="card">
           <p class="name">bizougarn ziyad</p>
