--- a/index.html
+++ b/index.html
@@ -110,6 +110,31 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+        <!-- ________ *Milrer* Contributor card START ________ -->
+        <div class="card">
+          <p class="name">Nicolas</p>
+          <p class="contact">
+            <i class="fa-solid fa-star"></i>
+            <a href="https://louisnicolasleuillet.com/" target="_blank">Portfolio</a>
+          </p>
+          <p class="about">about you</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://believemy.com/course/formation-react" target="_blank" title="First Resource">Apprendre React</a>
+              </li>
+              <li>
+                <a href="https://believemy.com/r/le-guide-complet-sur-flexbox-css" target="_blank" title="Second Resource">Tout savoir sur flexbox</a>
+              </li>
+              <li>
+                <a href="https://believemy.com/course/formation-nextjs" target="_blank" title="Third resource">Formation sur NextJS</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Milrer* Contributor card END ________ -->
         
         <!-- ________ bizougarnziyad's card START ________  -->
         <div class="card">
