Add my card information

--- a/index.html
+++ b/index.html
@@ -110,6 +110,34 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+        <!-- ________ ShoaibHasan's Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Shoaib Hasan</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/mohd-shoaib-2a0b16230/" target="_blank">Mohd Shoaib</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/shoaibhasann" target="_blank">@shoaibhasann</a>
+          </p>
+          <p class="about">You're a full stack developer proficient in the MERN stack (MongoDB, Express, React, Node.js) and currently expanding your skill set by learning Next.js to enhance your capabilities in building performant web applications.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://javascript.info/" target="_blank" title="First Resource">Javascript.info</a>
+              </li>
+              <li>
+                <a href="https://devui.io" target="_blank" title="Second Resource">Dev-UI</a>
+              </li>
+              <li>
+                <a href="https://uiverse.io" target="_blank" title="Third resource">uiverse.io</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ ShoaibHasan's Contributor card END ________  -->
+
         
         <!-- ________ bizougarnziyad's card START ________  -->
         <div class="card">
