--- a/index.html
+++ b/index.html
@@ -140,12 +140,39 @@
 
         <!-- ________ gabriel04alves's card START ________  -->
         <div class="card">
-          <p class="name">Gabriel Alves</p>
+          <p class="name">i</p>
           <p class="contact">
             <i class="fab fa-linkedin"></i>
-            <a href="https://www.linkedin.com/in/gabriel04alves" target="_blank">Gabriel Alves</a>
+            <a href="https://www.linkedin.com/in/gabriel04alves" target="_blank">Rakesh Mishra</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/gabriel04alves" target="_blank">gabriel04alves</a>
+            <a href="https://www.github.com/gabriel04alves" target="_blank">rakesh</a>
+          </p>
+          <p class="about">I am currently a student of Information Systems and have already graduated as a Computer Technician. I study technology daily with the goal of becoming a software developer.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.duolingo.com/" target="_blank" title="Duolingo">Duolingo</a> - A platform to help you learn a new language.
+              </li>
+              <li>
+                <a href="https://monkeytype.com/" target="_blank" title="Monkeytype">Monkeytype</a> - A tool to improve your typing speed and accuracy.
+              </li>
+              <li>
+                <a href="https://judge.beecrowd.com/" target="_blank" title="beecrowd">beecrowd</a> - A website to enhance your programming logic through coding challenges.
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ gabriel04alves's card END ________  -->
+
+        <!-- ________ rakesh's card START ________  -->
+        <div class="card">
+          <p class="name">Rakesh Mishra</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/rakesh-mishra" target="_blank">i</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/NameawaShinderu" target="_blank">gabriel04alves</a>
           </p>
           <p class="about">I am currently a student of Information Systems and have already graduated as a Computer Technician. I study technology daily with the goal of becoming a software developer.</p>
           <div class="resources">
