--- a/index.html
+++ b/index.html
@@ -110,7 +110,34 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
-        
+         
+        <!-- ________ kartikey369-ind's card START ________  -->
+        <div class="card">
+          <p class="name">Kartikey Korimilli</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/kartikeyzzz" target="_blank">kartikeyzzz</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/kartikey369-ind" target="_blank">kartikey369-ind</a>
+          </p>
+          <p class="about">I am a first-year cs student at anits college(india), passionate about exploring the realms of coding and building some robust softwares.</p>
+          <div class="resources">
+            <p>SOME Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ kartikey369-ind card END ________  -->
+
         <!-- ________ bizougarnziyad's card START ________  -->
         <div class="card">
           <p class="name">bizougarn ziyad</p>
