--- a/index.html
+++ b/index.html
@@ -110,7 +110,28 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
-        
+        <div class="card">
+          <p class="name">Kosikan Nagananthakumaran</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/kosikan20" target="_blank">kosikan20</a>
+          </p>
+          <p class="about">I'm a Software Engineer</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">Freecodecamp</a>
+              </li>
+              <li>
+                <a href="https://chatgpt.com/" target="_blank" title="Second Resource">ChatGPT</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@t3dotgg" target="_blank" title="Third resource">Theo</a>
+              </li>
+            </ul>
+          </div>
+        </div>
         <!-- ________ bizougarnziyad's card START ________  -->
         <div class="card">
           <p class="name">bizougarn ziyad</p>
