--- a/index.html
+++ b/index.html
@@ -110,6 +110,33 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+        <!-- ________ ebenezerraph's card START ________  -->
+        <div class="card">
+          <p class="name">Ebenezer Raphael</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/ebenezerraph" target="_blank">@ebenezerraph</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/ebenezerraph" target="_blank">@ebenezerraph</a>
+          </p>
+          <p class="about">Hi there, my name's Ebenezer Raphael. I'm a budding web developer and technical writer.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://roadmap.sh/" target="_blank" title="Guides for Developers">Developer Roadmaps</a> - Guides for Developers.
+              </li>
+              <li>
+                <a href="https://www.frontendmentor.io/" target="_blank" title="Frontend Coding Challenges">Frontend Mentor</a> - Frontend Coding Challenges.
+              </li>
+              <li>
+                <a href="https://exercism.org/" target="_blank" title="Backend Coding Exercises">Exercism</a> - Backend Coding Exercises.
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ ebenezerraph's card END ________  -->
         
         <!-- ________ bizougarnziyad's card START ________  -->
         <div class="card">
