--- a/index.html
+++ b/index.html
@@ -111,6 +111,34 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
         
+        <!-- ________ InkyCrow's card START ________  -->
+        <div class="card">
+          <p class="name">Inky-Crow</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/willowcorvus" target="_blank">Willow Corvus</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Inky-Crow" target="_blank">Inky Crow</a>
+
+          </p>
+          <p class="about">I have experience with coding for fun and am trying to learn skills to break into the computer science industry.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.piskelapp.com/" target="_blank" title="First Resource">Piskel</a> - A free to use pixel art and animation software that is great for making free assets
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Second Resource">W3Schools</a> - A great place for docs and code examples
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Third resource">Stack overflow</a> - A community form where you can post problems and get feedback and solutions.
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ InkyCrow's card END ________  -->
+
         <!-- ________ bizougarnziyad's card START ________  -->
         <div class="card">
           <p class="name">bizougarn ziyad</p>
