--- a/index.html
+++ b/index.html
@@ -111,6 +111,32 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        
+        <div class="card">
+          <p class="name">Mori </p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/dev4NOOBS" target="_blank">@dev4NOOBS</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Mori-Takahashi" target="_blank">Mori-Takahashi</a>
+          </p>
+          <p class="about">On a journey to master coding, Passionate about creating amazing web experien</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://cssbattle.dev/" target="_blank" title="First Resource">CSS Battle</a>
+              </li>
+              <li>
+                <a href="https://jsfiddle.net/" target="_blank" title="Second Resource">jsfiddle to share and test code</a>
+              </li>
+              <li>
+                <a href="https://10015.io/" target="_blank" title="Third resource">10015.io an all in 1 box for css etc.</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
 
         <div class="card">
           <p class="name">Aseel Ahmed</p>
