Add new card Create new card using template provided in index.html

--- a/index.html
+++ b/index.html
@@ -103,6 +103,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+         <div class="card">
+          <p class="name">Loren Waddle</p>
+          <p class="contact">
+            <!-- <i class="fab fa-x-twitter"></i> -->
+            <i class="fa-brands fa-threads"></i>
+            <a href="https://www.threads.net/@loren.waddle" target="_blank">loren.waddle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/lwaddle" target="_blank">lwaddle</a>
+          </p>
+          <p class="about">I'm considering switching careers and getting into full stack development. Learning Git/GitHub has been fun.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.geeksforgeeks.org" target="_blank" title="First Resource">GeeksforGeeks</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com" target="_blank" title="Second Resource">Stack Overflow</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org" target="_blank" title="Third resource">Mozilla</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Anal joseph</p>
