Modify comments around card block

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
-         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+         <!-- ________ lwaddle's card START ________  -->
          <div class="card">
           <p class="name">Loren Waddle</p>
           <p class="contact">
@@ -129,7 +129,7 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________ lwaddle's card END ________  -->
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
