--- a/index.html
+++ b/index.html
@@ -111,6 +111,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
         
+        <!-- ________ kartikey369-ind's card START ________  -->
+        <div class="card">
+          <p class="name">Kartikey Korimilli</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/kartikeyzzz" target="_blank">kartikeyzzz</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/kartikey369-ind" target="_blank">kartikey369-ind</a>
+          </p>
+          <p class="about">I am a first-year cs student at anits college(india), passionate about exploring the realms of coding and building some robust softwares.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://cssbattle.dev/" target="_blank" title="First Resource">CSS Battle</a>
+              </li>
+              <li>
+                <a href="https://jsfiddle.net/" target="_blank" title="Second Resource">JSFiddle - Share and test code</a>
+              </li>
+              <li>
+                <a href="https://10015.io/" target="_blank" title="Third resource">10015.io - An all-in-one box for CSS and more</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ kartikey369-ind's card END ________  -->
+
         <!-- ________ bizougarnziyad's card START ________  -->
         <div class="card">
           <p class="name">bizougarn ziyad</p>
