--- a/index.html
+++ b/index.html
@@ -1450,6 +1450,31 @@
           </div>
         </div>
         <!-- ========= Card 12 END =========   -->
+        <div class="card">
+          <p class="name">Meran Ahsan</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/Ahsancodes" target="_blank">Ahsancodes</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/meran-ahsan" target="_blank">meran-ahsan</a>
+          </p>
+          <p class="about">I'm Meran and i'm a student learning coding and this is my first github contribution.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Lexical_grammar#reserved_words" target="_blank" title="First Resource"> Resources for Developers, by Developers </a>
+              </li>
+              <li>
+                <a href="https://blog.cleancoder.com/" target="_blank" title="Second Resource">The Clean Code Blog</a>
+              </li>
+              <li>
+                <a href="https://andybrewer.github.io/mvp/" target="_blank" title="Third resource"> A minimalist stylesheet for HTML elements </a>
+              </li>
+            </ul>
+          </div>
+        </div>
 
         <!-- ========= END ========= -->
 
