Faris card added
Just learn to contribute

--- a/index.html
+++ b/index.html
@@ -103,6 +103,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+         <div class="card">
+          <p class="name">Faris Haziq</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/faris-haziq-669b31244/" target="_blank">Faris Haziq</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/FarisHaziq02" target="_blank">FarisHaziq02</a>
+          </p>
+          <p class="about">Hi there I am a passionate full stack developer, and I'm here to learn how to contribute to this project</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="For beginners">freeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="To understand more">w3schools</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank" title="Project Ideas">Youtube</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Anal joseph</p>
