--- a/index.html
+++ b/index.html
@@ -118,18 +118,18 @@
             <i class="fa-solid fa-star"></i>
             <a href="https://louisnicolasleuillet.com/" target="_blank">Portfolio</a>
           </p>
-          <p class="about">about you</p>
+          <p class="about">My name is Nicolas and I love coding</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://believemy.com/course/formation-react" target="_blank" title="First Resource">Apprendre React</a>
+                <a href="https://believemy.com/course/formation-react" target="_blank" title="Apprendre React">Apprendre React</a>
               </li>
               <li>
-                <a href="https://believemy.com/r/le-guide-complet-sur-flexbox-css" target="_blank" title="Second Resource">Tout savoir sur flexbox</a>
+                <a href="https://believemy.com/r/le-guide-complet-sur-flexbox-css" target="_blank" title="Tout savoir sur flexbox">Tout savoir sur flexbox</a>
               </li>
               <li>
-                <a href="https://believemy.com/course/formation-nextjs" target="_blank" title="Third resource">Formation sur NextJS</a>
+                <a href="https://believemy.com/course/formation-nextjs" target="_blank" title="Formation sur NextJS">Formation sur NextJS</a>
               </li>
             </ul>
           </div>
