--- a/index.html
+++ b/index.html
@@ -103,6 +103,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+          <!-- ________ *ArgyP* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Argyris Petras</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+      
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Argyrhspet1" target="_blank">Argyris Petras</a>
+          </p>
+          <p class="about">A software enthusiast on a mission to learn more about Open Source. </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/" target="_blank" title="First Resource">Github</a>
+              </li>
+              <li>
+                <a href="https://scikit-learn.org/stable/" target="_blank" title="Second Resource">Scikit Learn</a>
+              </li>
+              <li>
+                <a href="https://pandas.pydata.org/" target="_blank" title="Third resource">Pandas</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *ArgyP* Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Anal joseph</p>
