--- a/index.html
+++ b/index.html
@@ -132,6 +132,34 @@
 
                 <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below --><!-- Keep one line of space above and below your card -->
                 <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+        
+        <!-- ________ *TEMPLATE: Warren Smith START ________  -->
+        <div class="card">
+          <p class="name">Warren Smith</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/WxrrenSmith" target="_blank">@WxrrenSmith</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Wxrren" target="_blank">Wxrren</a>
+          </p>
+          <p class="about">Hi there! I'm an aspiring software developer who started learning how to code on 25/04/2023. I'm currently doing a Level 5 diploma in web development and looking for as many ways as possible to enhance my skills </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org" target="_blank" title="Free online courses in full stack development">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://getbootstrap.com/docs/4.3/getting-started/introduction/" target="_blank" title="Bootstrap CDN documentation">Bootstrap</a>
+              </li>
+              <li>
+                <a href="https://www.theodinproject.com" target="_blank" title="Full stack curriculum supported by an open source community">The Odin Project</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ ebenezerraph's card START ________ -->
         <div class="card">
           <p class="name">Ebenezer Raphael</p>
