--- a/index.html
+++ b/index.html
@@ -103,6 +103,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Lu Han</p>
+          <p class="contact">
+            <i class="fab fa-hashnode"></i>
+            <a href="https://seabass.hashnode.dev/" target="_blank">HashNode</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Seabass2333" target="_blank">Seabass2333</a>
+          </p>
+          <p class="about">Hi there, my name's Lu Han. I'm a full stack developer, and I'm currently learning about AI.Happy to contribute to this project.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://bigfrontend.dev/" target="_blank" title="BFE">BFE</a>
+              </li>
+              <li>
+                <a href="https://pixabay.com/" target="_blank" title="pixabay">pixabay</a>
+              </li>
+              <li>
+                <a href="https://www.30secondsofcode.org/list" target="_blank" title="30secondsofcode">30secondsofcode</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
          <!-- ________ lwaddle's card START ________  -->
          <div class="card">
           <p class="name">Loren Waddle</p>
