Adding new contact card

--- a/index.html
+++ b/index.html
@@ -189,6 +189,33 @@
         </div>
         
         <!-- ________ kartikey's card card END ________  -->
+
+        <!-- ________ Ishaan's card START ________  -->
+        <div class="card">
+          <p class="name">Ishaan Agarwal</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/ishaan_agawal" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/ishaanagw" target="_blank">Your handle</a>
+          </p>
+          <p class="about">about you</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.udemy.com/course/100-days-of-code/?couponCode=NVDIN35" target="_blank" title="Python 100 Days">Learn Python</a>
+              </li>
+              <li>
+                <a href="https://www.udemy.com/course/flutter-bootcamp-with-dart/?couponCode=NVDIN35" target="_blank" title="Dart and Flutter Bootcamp">Flutter Bootcamp</a>
+              </li>
+              <li>
+                <a href="https://www.deeplearning.ai/resources/" target="_blank" title="Machine Learning Yearning Book">Machince learning book/a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Ishaan's card END ________  -->
         
         <!-- ________ ebenezerraph's card START ________ -->
         <div class="card">
