Updated description for my contact card

--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
           <p class="name">Ishaan Agarwal</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
-            <a href="https://x.com/ishaan_agawal" target="_blank">Your handle</a>
+            <a href="https://x.com/ishaan_agawal" target="_blank">ishaan_agarwal</a>
             <i class="fab fa-github"></i>
-            <a href="https://github.com/ishaanagw" target="_blank">Your handle</a>
+            <a href="https://github.com/ishaanagw" target="_blank">ishaanagw</a>
           </p>
-          <p class="about">about you</p>
+          <p class="about">I am a working lawyer, transitioning to computers. Starting by learning html and python.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
