--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <i class="fab fa-github"></i>
             <a href="https://github.com/Argyrhspet1" target="_blank">Argyris Petras</a>
           </p>
-          <p class="about">A software enthusiast on a mission to learn more about Open Source. </p>
+          <p class="about">A software enthusiast attending Software Engineering class who wants to learn more about Open Source and Github. </p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
