--- a/index.html
+++ b/index.html
@@ -103,6 +103,32 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________   ArgyPet card START ________  -->
+        <div class="card">
+          <p class="name">Argyris Petras</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">Argyris Petras</a>
+          </p>
+          <p class="about">I am a software engineering enthusiast whose goal is to learn as much more things about OpenSource,GitHub and Software in general.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/" target="_blank" title="First Resource">Github</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Second Resource">Stack Overflow</a>
+              </li>
+              <li>
+                <a href="https://scikit-learn.org/stable/" target="_blank" title="Third resource">Scikit-Learn</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________  ArgyPet card END ________  -->
+
          <!-- ________ lwaddle's card START ________  -->
          <div class="card">
           <p class="name">Loren Waddle</p>
