--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <i class="fab fa-github"></i>
             <a href="https://github.com/shoaibhasann" target="_blank">@shoaibhasann</a>
           </p>
-          <p class="about">You're a full stack developer proficient in the MERN stack (MongoDB, Express, React, Node.js) and currently expanding your skill set by learning Next.js to enhance your capabilities in building performant web applications.</p>
+          <p class="about">You're a full stack developer proficient in the  stack (MongoDB, Express, React, Node.js) and currently expanding your skill set by learning Next.js to enhance your capabilities in building performant web applications.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
@@ -1460,7 +1460,6 @@
           </p>
           <p class="about">I'm Meran and i'm a student learning coding and this is my first github contribution.</p>
           <div class="resources">
-            <p>3 Useful Dev Resources</p>
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
