--- a/index.html
+++ b/index.html
@@ -102,7 +102,30 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
-        
+
+
+                <div class="card">
+          <p class="name">Sudo Arash</p>
+          <p class="contact">
+            You can only find me on GitHub:)
+          </p>
+          <p class="about">I would love to help projects grow and I love team work!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://youtube.com" target="_blank" title="YouTube - The best place to learn anything!">YouTube</a>
+              </li>
+              <li>
+                <a href="https://www.google.com" target="_blank" title="You've guessed it! Google">Google</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Stack Overflow - Q&A for Developers">Stack Overflow</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
         <!-- ________   ArgyPet card START ________  -->
         <div class="card">
           <p class="name">Argyris Petras</p>
@@ -1632,7 +1655,7 @@
           </p>
           <p class="about">I'm a software engineer with a passion for web development and ML.</p>
           <div class="resources">
-            
+
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
