--- a/index.html
+++ b/index.html
@@ -103,11 +103,12 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
-
+        <!-- ________   SudoArash card START ________  -->
         <div class="card">
           <p class="name">Sudo Arash</p>
           <p class="contact">
-            You can only find me on GitHub:)
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/sudo-arash" target="_blank">Sudo Arash</a>
           </p>
           <p class="about">I would love to help projects grow and I love team work!</p>
           <div class="resources">
@@ -125,6 +126,7 @@
             </ul>
           </div>
         </div>
+        <!-- ________  SudoArash card END ________  -->
 
         <!-- ________   ArgyPet card START ________  -->
         <div class="card">
