Added Atharva Rasane's Card Information

--- a/index.html
+++ b/index.html
@@ -102,6 +102,33 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- ________ Atharva Rasane's card START ________  -->
+        <div class="card">
+          <p class="name">Atharva Rasane</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/atharva-rasane/" target="_blank">Atharva Rasane</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Atharva-Rasane/" target="_blank">Atharva-Rasane</a>
+          </p>
+          <p class="about">I am a developer who likes bugs (and not just the computer kind)</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank" title="YouTube">YouTube</a>
+              </li>
+              <li>
+                <a href="https://chatgpt.com/" target="_blank" title="Chatgpt">Chatgpt</a>
+              </li>
+              <li>
+                <a href="https://www.google.com/" target="_blank" title="Google">Google</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Atharva Rasane's card END ________  -->
         
         <!-- ________   ArgyPet card START ________  -->
         <div class="card">
