FIX: Prettier Issue

--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
                 <a href="https://www.arduino.cc/" target="_blank" title="First Resource">Arduino</a>
               </li>
               <li>
-                <a href="https://www.espressif.com/en/support/documents/technical-documents target="_blank" title="Second Resource">Espressif Docs</a>
+                <a href="https://www.espressif.com/en/support/documents/technical-documents" target="_blank" title="Second Resource">Espressif Docs</a>
               </li>
               <li>
                 <a href="https://www.w3schools.com/" target="_blank" title="Third resource">W3Schools</a>
