--- a/index.html
+++ b/index.html
@@ -1665,6 +1665,15 @@
               <li>
                 <a href="https://roadmap.sh/frontend" target="_blank" title="First Resource"> Frontend Developer Roadmap </a>
               </li>
+              <li>
+                <a href="https://css-tricks.com/" target="_blank" title="CSS-Tricks">CSS Tricks</a>
+              </li>
+              <li>
+                <a href="https://w3schools.com/" target="_blank" title="W3schools">W3Schools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
         <!-- ========= Card 12 START =========   -->
         <div class="card">
           <p class="name">Anirban</p>
@@ -1686,12 +1695,6 @@
               </li>
               <li>
                 <a href="https://www.youtube.com/@LoveBabbar" target="_blank" title="Third Resource">A great YouTube channel for DSA using C++</a>
-              </li>
-              <li>
-                <a href="https://css-tricks.com/" target="_blank" title="CSS-Tricks">CSS Tricks</a>
-              </li>
-              <li>
-                <a href="https://w3schools.com/" target="_blank" title="W3schools">W3Schools</a>
               </li>
             </ul>
           </div>
