First contribution for open source

--- a/index.html
+++ b/index.html
@@ -115,6 +115,47 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ * Abhishek Sharma's card START ________  -->
+        <div class="card">
+          <p class="name">Abhishek Sharma</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">@Shaykoo19</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">Shaykoo</a>
+          </p>
+          <p class="about">Hello, I am Full Stack Web Developer and my tech stack includes Angular, React, Vue, Node JS, Python, MySQL, MongoDB and many more. This is my first contribution to open source and thanks for giving this opportunity. To more and more contributions. Cheers!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.spriters-resource.com/" target="_blank" title="First Resource">
+                  The Spriters Ressource
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.theodinproject.com"
+                  target="_blank"
+                  title="Full stack curriculum supported by an open source community"
+                >
+                  The Odin Project
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.youtube.com/@harkirat1/videos"
+                  target="_blank"
+                  title="It's a nice YT channel for Indian folks to learn about web development."
+                >
+                  Harkirat Singh
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Abhishek Sharma's card END ________  -->
+
         <!-- ________ Atharva Rasane's card START ________  -->
         <div class="card">
           <p class="name">Atharva Rasane</p>
