Add my card information
Added my custom contribution card to the index.html file. This marks my first step into open-source contributions, and I'm excited to learn and grow as part of the community. Included my name, social links, and useful resources for fellow developers.

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+      <div class="card">
+        <p class="name">Ishan Jadhao</p>
+        <p class="contact">
+          <i class="fab fa-x-twitter"></i>
+          <a href="https://x.com/ishaannn31" target="_blank">@Ishaannn31</a>
+          <i class="fab fa-github"></i>
+          <a href="https://github.com/Ishaannn31" target="_blank">Ishaannn31</a>
+        </p>
+        <p class="about">👨‍💻 Data Science & AI student @ Universität des Saarlandes | Web Dev & DevOps enthusiast | Coder by day, learner by night | Exploring ML & Computer Vision 🚀</p>
+        <div class="resources">
+          <p>3 Useful Dev Resources</p>
+          <ul>
+            <li>
+              <a href="https://developer.mozilla.org/en-US/docs/Learn" target="_blank" title="MDN">MDN Web Docs</a>
+            </li>
+            <li>
+              <a href="https://www.geeksforgeeks.org/web-development/" target="_blank" title="GeeksforGeeks">Learn WebDev on GeeksforGeeks</a>
+            </li>
+            <li>
+              <a href="https://github.com/Bharat2044/100xDevs-Cohort3-WebDev-and-Devops" target="_blank" title="Very important github repo">IMP Github Repo to follow</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ Atharva Rasane's card START ________  -->
         <div class="card">
           <p class="name">Atharva Rasane</p>
