Made my fiirst contribution

--- a/index.html
+++ b/index.html
@@ -114,6 +114,32 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+         <!-- ________ *TEMPLATE: Aditya Pandey card START ________  -->
+        <div class="card">
+          <p class="name">Aditya Pandey</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/adityapandey78" target="_blank">Twitter</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/adityapandey78" target="_blank">Github</a>
+          </p>
+          <p class="about">Just trynna survive</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="https://x.com/wojakcodes" title="First Resource">Resource 1</a>
+              </li>
+              <li>
+                <a href="#" target="https://x.com/ThePrimeagen" title="Second Resource">Resource 2</a>
+              </li>
+              <li>
+                <a href="#" target="https://x.com/i_pranavmehta" title="Third resource">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
         <!-- ________ Atharva Rasane's card START ________  -->
         <div class="card">
