--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ bjutxe's card START ________  -->
+        <div class="card">
+          <p class="name">bjutxe</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/slinky2629" target="_blank">TaiyoMate</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/bjutxe" target="_blank">bjutxe</a>
+          </p>
+          <p class="about">Japanese programmer passionate about shell tricks and mathematics.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://qiita.com/" target="_blank" title="Qiita">Qiita: Japanese geeksforgeeks site</a>
+              </li>
+              <li>
+                <a href="https://b.ueda.tech/" target="_blank" title="Ryuichi Ueda's site">ShellTricks: This site created with shell</a>
+              </li>
+              <li>
+                <a href="https://www.3blue1brown.com/" target="_blank" title="3Blue1Brown">3Blue1Brown: Amazing math</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ bjutxe's card END ________  -->
+
         <!-- ________ Atharva Rasane's card START ________  -->
         <div class="card">
           <p class="name">Atharva Rasane</p>
