Added Aakash saini's card info

--- a/index.html
+++ b/index.html
@@ -2090,6 +2090,32 @@
           </div>
         </div>
 
+         <!-- ========= Aakash Saini's START =========  -->
+         <div class="card">
+          <p class="name">Aakash Saini</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/-aakashsaini/" target="_blank">_aakashsaini</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/aakashsaini09" target="_blank">Aakashsaini09</a>
+          </p>
+          <p class="about">Hi! My name is Aakashsaini, and I am very passionate about programming! Feel free to reach-out for. 😊</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://spline.design/ target="_blank" title="First Resource">Spline (3D models)</a>
+              </li>
+              <li>
+                <a href="https://ui.aceternity.com/" target="_blank" title="Third resource">Aceternity UI</a>
+              </li>
+              <li>
+                <a href="https://app.onlydust.com/" target="_blank" title="Second Resource">OnlyDust</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
